kubernetes/setup/haproxy.yaml
#helm install kubernetes-ingress haproxytech/kubernetes-ingress \
#--create-namespace \
#--namespace \
#haproxy-controller \
#--set controller.service.type=LoadBalancer \
#--set controller.replicaCount=1 \
#--set defaultBackend.replicaCount=1 \
#--set controller.logging.level=debug \
#--set controller.ingressClass=haproxy

apiVersion: v1
kind: Namespace
metadata:
  name: haproxy-controller
